--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
+keras==2.7.0
+numpy==1.21.3
+pandas==1.3.4
+pandas_datareader==0.10.0
+plotly==5.4.0
+scikit_learn==1.0.2
+streamlit==1.3.1
 yfinance==0.1.68
-matplotlib==3.5.1
-seaborn==0.11.2
-pandas-datareader==0.10.0
-plotly-express==0.4.1
-streamlit-lottie==0.0.3
-keras-models==0.0.7
-tensorflow==2.7.0
-scikit-learn==1.0.2
+tensorflow-cpu==2.7.0
